--- a/src/DemoPages/Dashboards/Minimal/style.css
+++ b/src/DemoPages/Dashboards/Minimal/style.css
@@ -82,7 +82,7 @@
   .tde {
     
     padding-top: 15px;
-    padding-left: 10px;
+    padding-left: 0px;
     padding-right: 10px;
     padding-bottom: 0px; 
     text-align: right;
@@ -104,7 +104,7 @@
   }
 
   .donutpad {
-    padding: 20px;
+    padding: 15px;
 
   }
 
@@ -127,6 +127,7 @@
     font-size: 15px;
     font-weight: 400;
     padding-right: 15px;
+    padding-left: 0px;
   }
   .circle {
     align-content: flex-end;
@@ -135,9 +136,9 @@
   }
 
   .Kg {
-    padding-right: 15px;
+    padding-right: 0px;
     padding-bottom: 15px;
-    font-size: 22px;
+    font-size: 18px;
     font-weight: bold;
     text-align: right;
   
@@ -146,7 +147,7 @@
   .Kgi {
     padding-left: 20px;
     padding-top: 25px;
-    font-size: 25px;
+    font-size: 20px;
     font-weight: bold;
     text-align: left;
   
@@ -176,7 +177,7 @@
 
   .indi {
     font-weight: bold;
-    font-size: 30px;
+    font-size: 25px;
   }
 
   text-white{
@@ -248,3 +249,20 @@
   .bg-rojo {
     background: #ff4560
   }
+  .progress-bar-vertical {
+    width: 20px;
+    min-height: 100px;
+    display: flex;
+    align-items: flex-end;
+    margin-right: 20px;
+    float: left;
+  }
+  
+  .progress-bar-vertical .progress-bar {
+    width: 100%;
+    height: 0;
+    -webkit-transition: height 0.6s ease;
+    -o-transition: height 0.6s ease;
+    transition: height 0.6s ease;
+  }
+  
