--- a/src/assets/layout/header/_header-base.scss
+++ b/src/assets/layout/header/_header-base.scss
@@ -52,11 +52,12 @@
   display: flex;
   align-items: center;
   transition: width .2s;
-
   .logo-src {
-    height: $logo-height;
-    width: $logo-width;
-    background: url('~assets/utils/images/logo-inverse.png');
+  
+    height: 60%;
+    width: 60%;
+    background-size: contain;
+    background-repeat: no-repeat;
   }
 }
 
