--- a/src/DemoPages/Dashboards/Minimal/style.css
+++ b/src/DemoPages/Dashboards/Minimal/style.css
@@ -85,7 +85,7 @@
     padding-left: 0px;
     padding-right: 10px;
     padding-bottom: 0px; 
-    text-align: right;
+    text-align: center;
     
     
   }
@@ -133,6 +133,8 @@
     align-content: flex-end;
     text-align: right;
     padding-right: 15px;
+    padding-top: 60px;
+    padding-bottom: 30px
   }
 
   .Kg {
@@ -339,5 +341,82 @@
     color: #fff;
     text-align: center;
   }
-  
+  .blueRow{
+    background : #1E3862 !important;
+    color: #fff;
+    text-align: center;
+  }
+  .title2Orange{
+    background : #FF9F4B !important;
+    color: #fff;
+    text-align: center;
+    padding: 10px;
+  }
+  .titleBlue{
+    background : #23509B !important;
+    color: #fff;
+    text-align: center;
+    padding:10px;
+  }
+  .bigFont{
+      font-family: Arial, Helvetica, sans-serif;
+      font-size: 25px;
+      color: #fff;
+      font-weight: bold;
+  }
+  .littleFont{
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 12px;
+    color: #fff;
+  }
+  .whiteBorder{
+    border-bottom: 1px solid white !important;
+    margin-left:5px;
+    margin-right:5px;
+  }
+  .blackBorder{
+    border-bottom: 2px solid #ABB2B9 !important;
+    border-right: 2px solid #ABB2B9 !important;
+    margin-left: 10px;
+    padding:0px;
+    border-radius: 0%;
+  }
+  .blackBorder2{
+    border-bottom: 2px solid #ABB2B9 !important;
+    margin-left: 10px;
+    margin-right: 10px;
+    padding:0px;
+  }
+  .blackBorder3{
+    border-right: 2px solid #ABB2B9 !important;
+    margin-left: 10px;
+    padding:0px;
+  }
+  .font1 { 
+
+    font-size: 18px; 
+    font-weight: normal;
+    margin-left: 10px;
+  }
+
+  .font2 { 
+
+    font-size: 14px; 
+    font-weight: normal;
+    margin-left: 10px;
+  }
+  .font3 { 
+
+    font-size: 14px; 
+    font-weight: bold;
+    margin-left: 5px;
+  }
+  .noSpace{
+    margin: 0px !important;
+    padding:0px !important;
+  }
+  .space5px{
+    margin: 5px !important;
+    padding:5px !important;
+  }
   
