100% automatico, eliminar del menu horno,env,analisis

--- a/src/DemoPages/Dashboards/Minimal/style.css
+++ b/src/DemoPages/Dashboards/Minimal/style.css
@@ -419,4 +419,9 @@
     margin: 5px !important;
     padding:5px !important;
   }
-  
+  .check{
+    background: green !important;
+  }
+  .notCheck{
+    background: white !important;
+  }
