cambio de color header, arreglos tipeo

--- a/src/assets/themes/default/_variables.scss
+++ b/src/assets/themes/default/_variables.scss
@@ -44,7 +44,7 @@ $grays: map-merge(
 //--#{$color}
 $brand: #545cd8;
 $blue: #86c6fb;
-$indigo: #444054;
+$indigo: #2264A7;
 $purple: #83588a;
 $pink: #f65ca2;
 $red: #d92550;
