--- a/src/assets/layout/header/_header-base.scss
+++ b/src/assets/layout/header/_header-base.scss
@@ -54,10 +54,11 @@
   transition: width .2s;
   .logo-src {
   
-    height: 60%;
-    width: 60%;
+    height: 120%;
+    width: 100%;
     background-size: contain;
     background-repeat: no-repeat;
+    margin-left: 15%;
   }
 }
 
