--- a/src/DemoPages/Dashboards/Minimal/style.css
+++ b/src/DemoPages/Dashboards/Minimal/style.css
@@ -390,24 +390,24 @@
     padding:0px;
   }
   .blackBorder3{
-    border-right: 1px solid #ABB2B9 !important;
+    border-right: 1px solid #d9d9d9 !important;
     padding:0px;
   }
   .blackBorderTop{
-    border-top: 1px solid #ABB2B9 !important;
+    border-top: 1px solid #d9d9d9 !important;
     padding:0px;
   }
   .blackBorderLeft{
-    border-left: 1px solid #ABB2B9 !important;
+    border-left: 1px solid #d9d9d9 !important;
     padding:0px;
   }
   .blackBorderBot{
-    border-bottom: 1px solid #ABB2B9 !important;
+    border-bottom: 1px solid #d9d9d9 !important;
     padding:px;
     margin-left: 10px;
   }
   .blackBorderRight{
-    border-right: 1px solid #ABB2B9 !important;
+    border-right: 1px solid #d9d9d9 !important;
   }
   .font1 { 
 
