Validacion tabla orden, arreglo insertar orden, arreglo tabla orden

--- a/src/DemoPages/Dashboards/Minimal/style.css
+++ b/src/DemoPages/Dashboards/Minimal/style.css
@@ -325,6 +325,10 @@
     background-color:#2264A7;
     color:#ffffff;
   }
+  .theadRed{
+    background-color:#F7431E;
+    color:#ffffff;
+  }
   .round {
     position: relative;
   }
