--- a/src/DemoPages/Dashboards/Minimal/style.css
+++ b/src/DemoPages/Dashboards/Minimal/style.css
@@ -526,3 +526,98 @@
   .notCheck{
     background: white !important;
   }
+  .fullscreen-space{
+    height: 100%;
+    width: 100%;
+    background-color: #f1f4f6;
+  }
+  .fullscreen-nav{
+    height: 10%;
+    background-color: #2264A7;
+  }
+  .fullscreen-centerSpace{
+    height: 50%;
+    background-color: #fff;
+  }
+  .fullscreen-center1{
+    margin: 1%;
+    margin-left: 1.5%;
+    border-radius: 15px;
+    height: 100%;
+    background-color: #2264A7;
+  }
+  .fullscreen-center1-head{
+    border-radius: 15px 15px 0 0;
+    height: 20%;
+    background-color: #13395E;
+  }
+  .fullscreen-center1-body1{
+    border-bottom: 1px solid black;
+    height: 40%;
+  }
+  .fullscreen-center1-body2{
+    height: 40%;
+  }
+  .fullscreen-center2{
+    border: 1px solid black;
+    border-radius: 15px !important;
+    margin-top: 2%;
+    margin-right: 2%;
+    height: 45%;
+  }
+  .fullscreen-theadBlue{
+    width: 100%;
+    border-radius:  15px 15px 0 0 !important ;
+    background-color:#2264A7;
+    color:#ffffff;
+  }
+
+  .fullscreen-tableBody{
+    width: 100%;
+    border-radius: 0px 0px 15px 15px !important ;
+    background-color:#ffffff;
+  }
+  .border1{
+    border-radius: 15px 0 0 0  !important;
+  }
+  .border2{
+    border-radius: 0 15px  0 0  !important;
+  }
+  .fullscreen-center3{
+    margin-top: 2%;
+    height: 43.5%;
+    border: 1px solid black;
+    border-radius: 15px !important;
+  }
+  .fullscreen-center3-verde1{
+    background-color:#02c39a;
+    border-radius:  15px 0  0 15px  !important;
+  }
+  .fullscreen-center3-verde2{
+    background-color:#069a8a;
+  }
+  .fullscreen-center3-verde3{
+    background-color:#0a717a;
+    border-radius: 0 15px 15px 0  !important;
+  }
+  .fullscreen-botSpace{
+    padding-left: 1%;
+    padding-right: 2%;
+    padding-bottom: 4%;
+    height: 40%;
+    background-color: #617583;
+  }
+  .fullscreen-botMaquina{
+    margin-top: 15%;
+    height: 100%;
+    border: 1px solid black;
+    border-radius: 15px !important;
+  }
+  .fullscreen-botMaquina2{
+    margin-top: 15%;
+    margin-left: 5%;
+    margin-right: 50%;
+    height: 100%;
+    border: 1px solid black;
+    border-radius: 15px !important;
+  }
