--- a/src/DemoPages/Dashboards/Minimal/style.css
+++ b/src/DemoPages/Dashboards/Minimal/style.css
@@ -274,6 +274,11 @@
     padding-left: 10px;
     padding-right: 10px;
   }
+  .title1orange2 {
+    color: #FF6200;
+    font-size: 16px;
+    letter-spacing: 0.5px;
+  }
   .cerrarO {
     color: #ABB2B9;
     font-size: 14px;
@@ -427,6 +432,15 @@
     font-size: 12px;
     color: #fff;
   }
+  .bigFontGreen{
+    font-size: 30px;
+    color: #069a8a;
+    font-weight: bold;
+}
+.littleFontGreen{
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 12px;
+}
   .whiteBorder{
     border-bottom: 1px solid white !important;
     margin-left:5px;
@@ -537,7 +551,6 @@
   }
   .fullscreen-centerSpace{
     height: 50%;
-    background-color: #fff;
   }
   .fullscreen-center1{
     margin: 1%;
@@ -545,6 +558,7 @@
     border-radius: 15px;
     height: 100%;
     background-color: #2264A7;
+    color: #fff;
   }
   .fullscreen-center1-head{
     border-radius: 15px 15px 0 0;
@@ -575,7 +589,6 @@
   .fullscreen-tableBody{
     width: 100%;
     border-radius: 0px 0px 15px 15px !important ;
-    background-color:#ffffff;
   }
   .border1{
     border-radius: 15px 0 0 0  !important;
@@ -585,8 +598,9 @@
   }
   .fullscreen-center3{
     margin-top: 2%;
+    margin-right: 1%;
     height: 43.5%;
-    border: 1px solid black;
+    padding-right: 1%;
     border-radius: 15px !important;
   }
   .fullscreen-center3-verde1{
@@ -600,12 +614,17 @@
     background-color:#0a717a;
     border-radius: 0 15px 15px 0  !important;
   }
+  .fullscreen-centerMaquina{
+    padding-right: 0 !important;
+    height: 100%;
+    border: 1px solid black;
+    border-radius: 15px !important;
+  }
   .fullscreen-botSpace{
     padding-left: 1%;
-    padding-right: 2%;
+    padding-right: 1%;
     padding-bottom: 4%;
     height: 40%;
-    background-color: #617583;
   }
   .fullscreen-botMaquina{
     margin-top: 15%;
@@ -615,8 +634,6 @@
   }
   .fullscreen-botMaquina2{
     margin-top: 15%;
-    margin-left: 5%;
-    margin-right: 50%;
     height: 100%;
     border: 1px solid black;
     border-radius: 15px !important;
