agregar detalle paro y redux

--- a/src/DemoPages/Dashboards/Minimal/style.css
+++ b/src/DemoPages/Dashboards/Minimal/style.css
@@ -638,3 +638,107 @@
     border: 1px solid black;
     border-radius: 15px !important;
   }
+
+  .blue{
+    color:#2264A7;
+  }
+  .red{
+    color:#F7431E;
+  }
+  .paro1{
+    color:#0A717A;
+  }
+  .paro2{
+    color:#069A8A;
+  }
+  .paro3{
+    color:#02C39A;
+  }
+  .paro4{
+    color:#FFD91C;
+  }
+  .paro5{
+    color:#FF9100;
+  }
+  .paro6{
+    color:#FF6200;
+  }
+  .paro7{
+    color:#EF233C;
+  }
+  .paro8{
+    color:#C82A2D;
+  }
+  .paro9{
+    color:#6E2641;
+  }
+  .paro10{
+    color:#42234E;
+  }
+  .paro11{
+    color:#373682;
+  }
+  .paro12{
+    color:#3959A1;
+  }
+  .paro13{
+    color:#3A7BC0;
+  }
+  .paro14{
+    color:#9DBDE0;
+  }
+  .paro15{
+    color:#CEDEF0;
+  }
+  
+  .bg-blue {
+    background: #2264A7
+  }
+  .bg-red{
+    background: #F7431E
+  }
+  .bg-paro1{
+    background:#0A717A;
+  }
+  .bg-paro2{
+    background:#069A8A;
+  }
+  .bg-paro3{
+    background:#02C39A;
+  }
+  .bg-paro4{
+    background:#FFD91C;
+  }
+  .bg-paro5{
+    background:#FF9100;
+  }
+  .bg-paro6{
+    background:#FF6200;
+  }
+  .bg-paro7{
+    background:#EF233C;
+  }
+  .bg-paro8{
+    background:#C82A2D;
+  }
+  .bg-paro9{
+    background:#6E2641;
+  }
+  .bg-paro10{
+    background:#42234E;
+  }
+  .bg-paro11{
+    background:#373682;
+  }
+  .bg-paro12{
+    background:#3959A1;
+  }
+  .bg-paro13{
+    background:#3A7BC0;
+  }
+  .bg-paro14{
+    background:#9DBDE0;
+  }
+  .bg-paro15{
+    background:#CEDEF0;
+  }
