--- a/src/DemoPages/Dashboards/Minimal/style.css
+++ b/src/DemoPages/Dashboards/Minimal/style.css
@@ -652,6 +652,16 @@
     border: 1px solid black;
     border-radius: 15px !important;
   }
+  .fullscreen-botMaquina-bot{
+    height: 15%;
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    border-radius: 0 0 15px 15px  !important ;
+    background-color:#2264A7;
+    color:#ffffff;
+    
+  }
 
   .blue{
     color:#2264A7;
