--- a/src/DemoPages/Dashboards/Minimal/style.css
+++ b/src/DemoPages/Dashboards/Minimal/style.css
@@ -487,7 +487,7 @@
   }
   .blackBorderBot{
     border-bottom: 1px solid #C9CDD2 !important;
-    padding:px;
+    padding:0px;
     margin-left: 10px;
   }
   .blackBorderRight{
@@ -566,6 +566,9 @@
   .fullscreen-centerSpace{
     height: 50%;
   }
+  .fullscreen-centerSpace-op{
+    height: 40%;
+  }
   .fullscreen-center1{
     margin: 1%;
     margin-left: 1.5%;
@@ -579,6 +582,16 @@
     height: 20%;
     background-color: #2264A7;
   }
+  .fullscreen-center1-head-op{
+    border-radius: 15px 15px 0 0;
+    height: 20%;
+    background-color: #02c39a;
+  }
+  .fullscreen-center1-body1-op{
+    height: 30%;
+    background-color: #2264A7;
+    color :white;
+  }
   .fullscreen-center1-body1{
     border-bottom: 1px solid black;
     height: 37%;
@@ -586,12 +599,22 @@
   .fullscreen-center1-body2{
     height: 43%;
   }
+  .fullscreen-center1-body2-op{
+    height: 25%;
+  }
   .fullscreen-center2{
 
     border-radius: 15px !important;
     margin-top: 2%;
     margin-right: 2%;
     height: 50%;
+  }
+  .fullscreen-center2-op{
+
+    border-radius: 15px !important;
+    margin-top: 2%;
+    margin-right: 2%;
+    height: 93.5%;
   }
   .fullscreen-theadBlue{
     width: 100%;
@@ -618,6 +641,14 @@
     padding-right: 1%;
     border-radius: 15px !important;
   }
+  .fullscreen-center3-op{
+    margin-top: 1%;
+    margin-left: 0%;
+    margin-right: 1%;
+    height: 100%;
+    padding-right: 1%;
+    border-radius: 15px !important;
+  }
   .fullscreen-center3-verde1{
     background-color:#02c39a;
     border-radius:  15px 0  0 15px  !important;
@@ -635,11 +666,22 @@
     height: 100%;
     border-radius: 15px !important;
   }
+  .fullscreen-centerMaquina-op{
+    padding-right: 0 !important;
+    height: 100%;
+    border-radius: 15px !important;
+  }
   .fullscreen-botSpace{
     padding-left: 1%;
     padding-right: 1%;
     padding-bottom: 4%;
     height: 40%;
+  }
+  .fullscreen-botSpace-op{
+    padding-left: 1%;
+    padding-right: 1%;
+    padding-bottom: 4%;
+    height: 50%;
   }
   .fullscreen-botMaquina{
     margin-top: 15%;
